<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="99dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/Dial"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/textph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonCall"
        android:layout_alignLeft="@+id/buttonCall"
        android:layout_alignStart="@+id/buttonCall"
        android:layout_marginBottom="84dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textph"
        android:layout_alignBottom="@+id/textph"
        android:layout_toLeftOf="@+id/textph"
        android:layout_toStartOf="@+id/textph"
        android:text="@string/enternum"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textph"
        android:layout_alignStart="@+id/textph"
        android:layout_below="@+id/image1"
        android:layout_marginTop="70dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text1"
        android:layout_alignStart="@+id/text1"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="33dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/Clickme"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text1"
        android:layout_alignBottom="@+id/text1"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/Url"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="107dp"
        android:layout_height="118dp"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_marginTop="67dp"
        android:src="@drawable/bricks"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textph"
        android:layout_alignStart="@+id/textph"
        android:layout_alignTop="@+id/image1"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/implicit"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonCall"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/buttonCall"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@android:color/black"
        android:text="@string/closeapp"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
